--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -10,12 +10,19 @@ tinymce.init({
   // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
   language: 'en',
   toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,table,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media',
+  menubar: 'file edit insert view format table tools help',
   paste_data_images: true,
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
   editorObject: {'id': 'question_question'},
   video_template_callback: (data) => {
     return '<audio controls controlslist="nodownload">' + '\n<source src="' + data.source1 + '"' + (data.source1mime ? ' type="' + data.source1mime + '"' : '') + ' />\n' + '</audio>';
+  },
+  invalid_styles: {
+    'table': 'width height',
+    'tr' : 'width height',
+    'th' : 'width height',
+    'td' : 'width height'
   },
   setup: function (editor) {
     editor.on('blur', function (e) {
@@ -34,7 +41,14 @@ tinymce.init({
   // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
   language: 'en',
   toolbar: 'code,|,bold,italic,underline,|,cut,copy,paste,|,search,|,undo,redo,|,forecolor,backcolor,|,justifyleft,justifycenter,justifyright,fontselect,fontsizeselect,|,table,|,tiny_mce_wiris_formulaEditor,tiny_mce_wiris_formulaEditorChemistry,|,fullscreen,media,|,youtubeIframe',
+  menubar: 'file edit insert view format table tools help',
   paste_data_images: true,
+  invalid_styles: {
+    'table': 'width height',
+    'tr' : 'width height',
+    'th' : 'width height',
+    'td' : 'width height'
+  },
   images_upload_url: 'https://www.neetprep.com/api/v1/fileUpload/fileUpload',
   // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better? this is especially added for data image which exist and images_dataimg_filter was anyway getting called for that
   editorObject: {'id': 'question_explanation'},
