red div to remove wiris dependency

--- a/app/views/application/_tinymce_ext_scripts.html.erb
+++ b/app/views/application/_tinymce_ext_scripts.html.erb
@@ -18,6 +18,6 @@
   cursor: pointer;
 }
 </style>
-<!--<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
   Hide MathType Trial Info* <br>*Click after opening MathType Editor
-</div>-->
+</div>
