--- a/app/views/tests/questions.html.erb
+++ b/app/views/tests/questions.html.erb
@@ -121,7 +121,7 @@
   </head>
   <body class="A4">
     <div class="page_template">
-      <div class='header'><img class="logo" src="https://www.neetprep.com/assets/img/logo.png"><%=@test.name%><span class="contact">Contact Number: 9667591930 / 8527521718</span><hr></div>
+      <div class='header'><img class="logo" src="https://www.neetprep.com/assets/img/logo.png"><a href="https://www.neetprep.com/neet-test/<%=@test.id%>"><%=@test.name%></a><span class="contact">Contact Number: 9667591930 / 8527521718</span><hr></div>
       <div class='content'></div>
       <div class='footer'><span>Page: </span></div>
     </div>
