show question link href

--- a/app/views/tests/questions.html.erb
+++ b/app/views/tests/questions.html.erb
@@ -134,7 +134,14 @@
           <% if test_sections and test_sections[index + 1] %>
             <div style="width: 100%; margin: auto; text-align: center; font-size: 32px;"><b><%= test_sections[index + 1][0]%></b></div>
           <% end %>
-          <span class="questionId" style="vertical-align: top;"><%=index + 1%>.</span><%= raw(question.question) %><br /><br />
+          <% if params[:show_qlink].present? and params[:show_qlink] == "1"%>
+            <a target="_blank" href="https://www.neetprep.com/questions/<%= question.id %>"><span>Question </span>
+          <% end %>
+          <span class="questionId" style="vertical-align: top;"><%=index + 1%>.</span>
+          <% if params[:show_qlink].present? and params[:show_qlink] == "1"%>
+            </a>
+          <% end %>
+          <%= raw(question.question) %><br /><br />
         </div>
         <% if index + 1 == @test_questions.length %>
           <div class="dontsplit">
