--- a/app/views/tests/questions.html.erb
+++ b/app/views/tests/questions.html.erb
@@ -156,7 +156,7 @@
             <% unless params[:hide_trial].present? and params[:hide_trial] == "1" %> 
               <br>
               <div class="free-trial">
-                <a target="_blank" href="https://www.neetprep.com/get-trial-course">CLICK HERE</a> to get FREE ACCESS for 3 days of ANY NEETprep course
+                <a target="_blank" href="https://www.neetprep.com/get-trial-course?utm_campaign=<%=@test.id%>_test_pdf">CLICK HERE</a> to get FREE ACCESS for 3 days of ANY NEETprep course
               </div>
               <br>
               <br>
