--- a/app/views/tests/crud_question.erb
+++ b/app/views/tests/crud_question.erb
@@ -40,11 +40,11 @@
       <button id="deletedSeletedTestQuestions">Delete Selected Questions</button>
       <textarea placeholder="selected question ids" id="selectedIds"></textarea>
     </div>
-    <div>
+    <div style="display:none;">
       Unselected Question Ids:
       <span id="unselectedIdsCount"></span>
       <button id="deletedUnSeletedTestQuestions">Delete Unselected Questions</button>
-      <textarea placeholder="unselected question ids" id="unselectedIds"></textarea>
+      <textarea placeholder="unselected question ids" id="unselectedIds" disabled></textarea>
     </div>
     <div>
       <input type="checkbox" id="selectAllQuestions"></input>
