textcolor and colorpicker for course description

--- a/app/views/admin/courses/_tinymce.html.erb
+++ b/app/views/admin/courses/_tinymce.html.erb
@@ -3,7 +3,7 @@
 <script>
 tinymce.init({
   selector: '#course_description',
-  plugins: "link image code paste media youtubeIframeAsync",
+  plugins: "link image code paste media textcolor colorpicker youtubeIframeAsync",
   // TODO: to be added only if secure loading of plugin.js below is not working
   // content_security_policy: "default-src 'self' *.wiris.net *.amazonaws.com *.cloudflare.com; style-src 'self' 'unsafe-inline' *.cloudflare.com; img-src * data:;",
   // TODO: not sure why was this required but language going undefined in wiris editor somehow and gets fixed now
