updating course ids for test prizes now

--- a/app/views/admin/tests/leader_board.html.slim
+++ b/app/views/admin/tests/leader_board.html.slim
@@ -29,9 +29,9 @@
           td = attempt.result["totalMarks"]
 
   div style="margin-top: 32px;"
-    h3 Inspire Batch Students
+    h3 Catalyst Batch Students
     div style="margin-top: 32px;"
-      button onclick='exportTableToCSV("#{@test_id + '-inspire-leaderboard.csv'}", "table.inspire tr")' Download Inspire CSV
+      button onclick='exportTableToCSV("#{@test_id + '-inspire-leaderboard.csv'}", "table.inspire tr")' Download Catalyst CSV
     table.inspire style="margin-top: 32px;"
       tr
         th User
@@ -53,9 +53,9 @@
           td = attempt.result["totalMarks"]
 
   div style="margin-top: 32px;"
-    h3 Achiever Batch Students
+    h3 Target Batch Students
     div style="margin-top: 32px;"
-      button onclick='exportTableToCSV("#{@test_id + '-achiever-leaderboard.csv'}", "table.achiever tr")' Download Achiever CSV
+      button onclick='exportTableToCSV("#{@test_id + '-achiever-leaderboard.csv'}", "table.achiever tr")' Download Target CSV
     table.achiever style="margin-top: 32px;"
       tr
         th User
