--- a/app/views/questions/add_explanation.html.erb
+++ b/app/views/questions/add_explanation.html.erb
@@ -141,10 +141,10 @@
     var currentTime = Date.now();
 
     var config = new AWS.Config({
-      accessKeyId: 'AKIAYEPQTPG6K7CEFU6D', secretAccessKey: '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', region: 'us-west-2'
+      accessKeyId: 'AKIAYEPQTPG6DDTMY3UR', secretAccessKey: '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', region: 'us-west-2'
     });
 
-    var credentials = new AWS.Credentials('AKIAYEPQTPG6K7CEFU6D', 'XtUqnXWkwvPvlK+t8gwuShuESJA1fjnBV1q6AwTX');
+    var credentials = new AWS.Credentials(''AKIAYEPQTPG6DDTMY3UR, 'pw3jq2uGsA0lLjc8S+lNVo8UAUGZDNif7+2whPcD');
     AWS.config.region = bucketRegion;
     AWS.config.credentials = credentials;
     // console.log(AWS.config.credentials);
