--- a/app/views/tests/questions.html.erb
+++ b/app/views/tests/questions.html.erb
@@ -15,6 +15,10 @@
           display:none !important;
         }
       }
+      .question {
+        padding-right: <%= params[:qpad] || "7"%>px;
+        padding-left: <%= params[:qpad] || "7"%>px;
+      }
       .free-trial {
         font-size: 30px;
         background: green;
