update razorpay generated links in footer and remove earlier privacy link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,9 @@
                 <use xlink:href="/assets/minima-social-icons.svg#twitter"></use>
               </svg> <span class="username"></span></a></li>
         </ul>
+        <ul class="social-media-list links">
+          <li><a href="https://merchant.razorpay.com/policy/MxEGLuynfLNpqu/terms">Terms &amp; Conditions</a></li>
+        </ul>
       </div>
 
       <div class="footer-col footer-col-3">
